--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,10 @@ nav ul{
   }.bottom{
     font-size: 1rem;
   }
+  .setup-result{
+    height: 100%;
+    overflow-y: scroll;
+  }
 }
 
 @keyframes fadeInUp {
